Removed all files that are in the .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-<<<<<<< HEAD
 /log/
 /vendor/
+/archive/
 .DS*
 composer.phar
 .ftpcongig
@@ -11,12 +11,3 @@ composer.phar
 .ftp*
 *.save
 *.old
-||||||| merged common ancestors
-=======
-composer.phar
-/vendor/
-
-# Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
-# You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
-# composer.lock
->>>>>>> 92d1c67dbb6a9178789ed06b2b0ddd4aa33d177b
