--- a/config/emailParams.generic.ini
+++ b/config/emailParams.generic.ini
@@ -1,5 +1,5 @@
 [emailParms]
-userName = cjob
-userPassword = Tobagoman1813
-fromName = cjob@ccny.cuny.edu
-sentTo = joepub1962@gmail.com
+userName =
+userPassword = 
+fromName =
+sentTo =
